<resources>
    <string name="app_name">CBUSOfficialTrialSix</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Your Email</string>
    <string name="Login_Logo_Page">Welcome to CBUS</string>
    <string name="login_btn_text">Login to Account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="regButtonText">Create New Account</string>
    <string name="regLoginText">Already Have an Account?</string>
    <string name="regPassword">Password</string>
    <string name="regConfirmPass">Confirm Password</string>
    <string name="DescriptionProfilePicture">Profile Picture</string>
    <string name="setupNameHint">Name</string>
    <string name="setupButtonNameText">Save Account Settings</string>
    <string name="PostDescriptionHint">Add description</string>
    <string name="addNewPost">Post Blog</string>
    <string name="bottomHomeText">Home</string>
    <string name="BottomNotificationText">Notifications</string>
    <string name="bottomAccountText">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="event_name">Event Name</string>
    <string name="ticket_link">Ticket link</string>
    <string name="address">Address</string>
    <string name="map_texts">Map</string>
    <string name="select_interests">Select Interests</string>
    <string name="checkbox">CheckBox</string>
    <string name="sports">Sports</string>
    <string name="music_theater">Music/Theater</string>
    <string name="visual_art">Visual Art</string>
    <string name="dining">Dining</string>
    <string name="academia">Academia</string>
    <string name="post_pin">Post Pin</string>
    <string name="add_description">Add description</string>
    <string name="date_mm_dd_yyyy">Date (MM/DD/YYYY)</string>
    <string name="click_for_more_information">Click for more information</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string-array name="categories">
        <item>sports</item>
        <item>music</item>
        <item>art</item>
        <item>food</item>
        <item>academia</item>
    </string-array>
</resources>
